--- a/includes/css/tmp.css
+++ b/includes/css/tmp.css
@@ -6,74 +6,98 @@ Flyttas till LESS senare
 25 april 2016 Sven Ängermark
 */
 
+/*Typografical updates de 2016*/
+body{
+    font-weight: 300;
+    font-size: 17px;
+    color: #000;    
+}
+h4{
+    line-height: 1.4em;
+    font-size: 24px;
+    font-weight: 400;
+    /*    letter-spacing: 0;*/
+
+}
+h4 a{
+    color: #ee7203;
+}
+.home #site-main .news-archive-block .post, 
+.home #site-main .news-archive-block .publication {
+    padding: 15px;
+}
+
+
+/* end */
+
 #site-header #header-banner #header-banner-content-wrapper #header-banner-content .front_2 p{
-	/*color:  #000 !important;*/
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 0;
+    /*color:  #000 !important;*/
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 0;
 }
 .mylightbox{
-	display: none;
+    display: none;
 }
 featherlight-content
 
 .featherlight-content .mylightbox{
-	display: block !important;
+    display: block !important;
 }
 .featherlight .featherlight-inner .mylightbox {
     display: block;
 }
 .submit{
-	border: none;
+    border: none;
 }
 em{
-	color: #000;	
+    color: #000;	
 }
 #site-main .site-sidebar .back-link.reset-link{
-	display: none;
+    display: none;
 }
 @media only screen and (min-width: 1200px) {
-	
-	
+
+
 }
 /* 992 - 1199*/
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-	
-	
+
+
 }
 /* 768 - 991 */
 @media only screen and (min-width: 768px) and (max-width: 991px){
-	
-	
+
+
 }
 /* 481 - 767 */
 @media screen and (min-width: 481px) and (max-width: 767px){
-	#site-header #header-banner #header-banner-content-wrapper #header-banner-content p {
-	    /*font-size: 35px;*/
-	    margin: 0 0 30px;
-	}
-	
+    #site-header #header-banner #header-banner-content-wrapper #header-banner-content p {
+        /*font-size: 35px;*/
+        margin: 0 0 30px;
+    }
+
 }
 /*  - 480 */
 @media  screen and (max-width: 480px) {
-	#site-header #header-banner #header-banner-content-wrapper #header-banner-content p {
-	    font-size: 38px;
-	    margin: 0 0 20px;
-	}
+    #site-header #header-banner #header-banner-content-wrapper #header-banner-content p {
+        font-size: 38px;
+        margin: 0 0 20px;
+    }
 }
 
 
 .mc4wp-form-basic button, .mc4wp-form-basic input[type="submit"], .mc4wp-form-basic input[type="button"], .mc4wp-form-theme button, .mc4wp-form-theme input[type="submit"], .mc4wp-form-theme input[type="button"] {
-	border: 0;
-	background: #ee7203;
-	color: #fff;
-	font-size: 14px;
-	font-weight: 600;
-	line-height: 1;
-	padding: 10px 11px 9px;
-	text-transform: uppercase;
-	transition: background 0.2s ease-in-out 0s;
-	width: auto;
+    border: 0;
+    background: #ee7203;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    padding: 10px 11px 9px;
+    text-transform: uppercase;
+    transition: background 0.2s ease-in-out 0s;
+    width: auto;
 }
 
 
@@ -82,14 +106,14 @@ em{
 
 }
 .leftmenu-strong{
-	color: #6F6F6F;
-	font-weight: 600;
+    color: #6F6F6F;
+    font-weight: 600;
 }
 
 ul.months{
-	display: none;
+    display: none;
 }
 .chemsec-button{
-	width: 190px;
+    width: 190px;
 }
- 
+
